// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems/Organisms/Layout Default 1`] = `
<div
  className="css-10wnws7-Box eyzgrpe0"
  data-testid="column-layout"
>
  <div
    className="css-1b38g56-Box eyzgrpe0"
  >
    <header
      className="css-12gsfsr-wrapper"
    >
      <div
        className="css-e7eaxg-pageWidth-pageWidth-content-content"
      >
        <div
          className="css-15eulur-logoWrapper"
        >
          <a
            aria-current="page"
            className="css-1n60v33-Link-withCSS-withCSS"
            href="/"
            hrefLang="en-us"
            onClick={[Function]}
            onMouseEnter={[Function]}
            rel=""
            target=""
          >
            <img
              alt="Spiral Financial"
              className="css-wdj37e-logoImage"
              src="/images/logo.svg"
            />
          </a>
        </div>
        <div
          className="css-167otmu-buttonsWrapper"
        >
          <span>
            <a
              className="css-1n60v33-Link-withCSS-withCSS"
              href="/auth/login"
              hrefLang="en-us"
              onClick={[Function]}
              onMouseEnter={[Function]}
              rel=""
              target=""
            >
              <span
                className="css-lq5o8a-loginLink"
              >
                Login
              </span>
            </a>
          </span>
           • 
          <a
            className="css-1n60v33-Link-withCSS-withCSS"
            href="https://support.spiral.us/hc/en-us/"
            hrefLang="en-us"
            onClick={[Function]}
            onMouseEnter={[Function]}
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="css-lq5o8a-loginLink"
            >
              Knowledgebase
            </span>
          </a>
        </div>
      </div>
    </header>
  </div>
  <div
    className="css-yhmzcl-Box eyzgrpe0"
  />
  <div
    className="css-nhw5dp-Box eyzgrpe0"
  >
    <aside
      className="css-1lrkyxv-Box eyzgrpe0"
    >
      <div
        className="css-14jg4jr-Box eyzgrpe0"
      >
        <ul
          data-testid="menu-items-list"
        >
          <li>
            <a
              href="/home"
              onClick={[Function]}
              onMouseEnter={[Function]}
              role="link"
              tabIndex={0}
            >
              <span
                className="css-1j7p7i1-Box-DesktopNavMenuItem eyzgrpe0"
              >
                <div
                  className="css-tinllb-DesktopNavMenuItem"
                />
                <span
                  className="css-11vckcn-Box eyzgrpe0"
                >
                  Home
                </span>
              </span>
            </a>
          </li>
          <li>
            <a
              href="/charities"
              onClick={[Function]}
              onMouseEnter={[Function]}
              role="link"
              tabIndex={1}
            >
              <span
                className="css-1j7p7i1-Box-DesktopNavMenuItem eyzgrpe0"
              >
                <div
                  className="css-iqmnt-DesktopNavMenuItem"
                />
                <span
                  className="css-11vckcn-Box eyzgrpe0"
                >
                  Charities
                </span>
              </span>
            </a>
          </li>
          <li>
            <a
              href="/categories"
              onClick={[Function]}
              onMouseEnter={[Function]}
              role="link"
              tabIndex={2}
            >
              <span
                className="css-1j7p7i1-Box-DesktopNavMenuItem eyzgrpe0"
              >
                <div
                  className="css-gezylh-DesktopNavMenuItem"
                />
                <span
                  className="css-11vckcn-Box eyzgrpe0"
                >
                  Categories
                </span>
              </span>
            </a>
          </li>
          <li>
            <a
              href="/cards"
              onClick={[Function]}
              onMouseEnter={[Function]}
              role="link"
              tabIndex={3}
            >
              <span
                className="css-1j7p7i1-Box-DesktopNavMenuItem eyzgrpe0"
              >
                <div
                  className="css-10plfm3-DesktopNavMenuItem"
                />
                <span
                  className="css-11vckcn-Box eyzgrpe0"
                >
                  Cards
                </span>
              </span>
            </a>
          </li>
        </ul>
      </div>
    </aside>
    <main
      className="css-1y9tui4-Box eyzgrpe0"
    >
      <div>
        Content
      </div>
    </main>
  </div>
  <div
    className="css-10etrxs-Box eyzgrpe0"
    data-testid="menu-mobile"
  >
    <ul
      className="css-oxg8dz-Box-NavMenuMobile eyzgrpe0"
      data-testid="menu-items-list"
    >
      <li>
        <a
          className="css-1n60v33-Link-withCSS-withCSS"
          href="/home"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
          rel=""
          target=""
        >
          <span
            className="css-cygiex-Box eyzgrpe0"
          >
            <div
              className="css-as14ju-MobileNavMenuItem"
            />
            <span
              className="css-37nree-Box eyzgrpe0"
            >
              Home
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          className="css-1n60v33-Link-withCSS-withCSS"
          href="/charities"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
          rel=""
          target=""
        >
          <span
            className="css-cygiex-Box eyzgrpe0"
          >
            <div
              className="css-88tbsy-MobileNavMenuItem"
            />
            <span
              className="css-37nree-Box eyzgrpe0"
            >
              Charities
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          className="css-1n60v33-Link-withCSS-withCSS"
          href="/categories"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
          rel=""
          target=""
        >
          <span
            className="css-cygiex-Box eyzgrpe0"
          >
            <div
              className="css-fddmuv-MobileNavMenuItem"
            />
            <span
              className="css-37nree-Box eyzgrpe0"
            >
              Categories
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          className="css-1n60v33-Link-withCSS-withCSS"
          href="/cards"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
          rel=""
          target=""
        >
          <span
            className="css-cygiex-Box eyzgrpe0"
          >
            <div
              className="css-ivihbp-MobileNavMenuItem"
            />
            <span
              className="css-37nree-Box eyzgrpe0"
            >
              Cards
            </span>
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Organisms/Layout No Menu 1`] = `
<div
  className="css-10wnws7-Box eyzgrpe0"
  data-testid="column-layout"
>
  <div
    className="css-1b38g56-Box eyzgrpe0"
  >
    <header
      className="css-12gsfsr-wrapper"
    >
      <div
        className="css-e7eaxg-pageWidth-pageWidth-content-content"
      >
        <div
          className="css-15eulur-logoWrapper"
        >
          <a
            aria-current="page"
            className="css-1n60v33-Link-withCSS-withCSS"
            href="/"
            hrefLang="en-us"
            onClick={[Function]}
            onMouseEnter={[Function]}
            rel=""
            target=""
          >
            <img
              alt="Spiral Financial"
              className="css-wdj37e-logoImage"
              src="/images/logo.svg"
            />
          </a>
        </div>
        <div
          className="css-167otmu-buttonsWrapper"
        >
          <span>
            <a
              className="css-1n60v33-Link-withCSS-withCSS"
              href="/auth/login"
              hrefLang="en-us"
              onClick={[Function]}
              onMouseEnter={[Function]}
              rel=""
              target=""
            >
              <span
                className="css-lq5o8a-loginLink"
              >
                Login
              </span>
            </a>
          </span>
           • 
          <a
            className="css-1n60v33-Link-withCSS-withCSS"
            href="https://support.spiral.us/hc/en-us/"
            hrefLang="en-us"
            onClick={[Function]}
            onMouseEnter={[Function]}
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="css-lq5o8a-loginLink"
            >
              Knowledgebase
            </span>
          </a>
        </div>
      </div>
    </header>
  </div>
  <div
    className="css-yhmzcl-Box eyzgrpe0"
  />
  <div
    className="css-nhw5dp-Box eyzgrpe0"
  >
    <main
      className="css-1y9tui4-Box eyzgrpe0"
    >
      <div>
        Content
      </div>
    </main>
  </div>
  <div
    className="css-10etrxs-Box eyzgrpe0"
    data-testid="menu-mobile"
  >
    <ul
      className="css-oxg8dz-Box-NavMenuMobile eyzgrpe0"
      data-testid="menu-items-list"
    >
      <li>
        <a
          className="css-1n60v33-Link-withCSS-withCSS"
          href="/home"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
          rel=""
          target=""
        >
          <span
            className="css-cygiex-Box eyzgrpe0"
          >
            <div
              className="css-as14ju-MobileNavMenuItem"
            />
            <span
              className="css-37nree-Box eyzgrpe0"
            >
              Home
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          className="css-1n60v33-Link-withCSS-withCSS"
          href="/charities"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
          rel=""
          target=""
        >
          <span
            className="css-cygiex-Box eyzgrpe0"
          >
            <div
              className="css-88tbsy-MobileNavMenuItem"
            />
            <span
              className="css-37nree-Box eyzgrpe0"
            >
              Charities
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          className="css-1n60v33-Link-withCSS-withCSS"
          href="/categories"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
          rel=""
          target=""
        >
          <span
            className="css-cygiex-Box eyzgrpe0"
          >
            <div
              className="css-fddmuv-MobileNavMenuItem"
            />
            <span
              className="css-37nree-Box eyzgrpe0"
            >
              Categories
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          className="css-1n60v33-Link-withCSS-withCSS"
          href="/cards"
          hrefLang="en-us"
          onClick={[Function]}
          onMouseEnter={[Function]}
          rel=""
          target=""
        >
          <span
            className="css-cygiex-Box eyzgrpe0"
          >
            <div
              className="css-ivihbp-MobileNavMenuItem"
            />
            <span
              className="css-37nree-Box eyzgrpe0"
            >
              Cards
            </span>
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
